src/ui/readarr_ui/downloads/snapshots/managarr__ui__readarr_ui__downloads__downloads_ui_tests__tests__snapshot_tests__downloads_second_item_selected_Downloads.snap
---
source: src/ui/readarr_ui/downloads/downloads_ui_tests.rs
expression: output
---
─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
   Title                                         Percent Complete   Size               Output Path                 Indexer                      Download Client      
   First Download Title                          50%                3.30 GB            /nfs/books/First Author     DrunkenSlug                  sabnzbd              
=> Second Download Title                         75%                1.00 GB            /nfs/books/Second Author    Nyaa                         transmission
