src/ui/readarr_ui/downloads/snapshots/managarr__ui__readarr_ui__downloads__downloads_ui_tests__tests__snapshot_tests__downloads_ui_Downloads.snap
---
source: src/ui/readarr_ui/downloads/downloads_ui_tests.rs
expression: output
---
─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
   Title                                         Percent Complete   Size               Output Path                 Indexer                      Download Client      
=> Test Download Title                           50%                3.30 GB            /nfs/books/Test Author      kickass torrents             transmission
